--- a/MoodPlayer/app/src/main/res/values/strings.xml
+++ b/MoodPlayer/app/src/main/res/values/strings.xml
@@ -1,9 +1,8 @@
 <resources>
     <string name="app_name">MoodPlayer</string>
     <string name="action_settings">Settings</string>
-
-    <!-- Music Genres -->
-    <string name="rock">Rock</string>
-    <string name="pop">Pop</string>
-
+    <string name="default_player_title">Just squeeze your hand to play!</string>
+    <!-- soundcloud-->
+    <string name="soundcloud_client_id">a2a51bf7a7f1451dbb021d0c5b6672c9</string>
+    <string name="soundcloud_client_secret">29f6b7d804811abfc94d35b9af18c207</string>
 </resources>
